test/libsolidity/syntaxTests/string/concat/string_concat_wrong_type_empty_array_literal.sol
contract C {
    function f() public {
        string.concat([], [], []);
    }
}
// ----
// TypeError 6378: (61-63): Unable to deduce common type for array elements.
